# subhook-trampoline-test

./: CMakeLists.txt  README.md
src/: foo.cxx  foo.hpp  symspec.h  test.cxx
